all auth working properly, including invalid endpoints, jwt, etc